// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/null-channel/eddington/proto/container";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "ApplicationServiceProto";

package container;

service ContainerService {
  rpc CreateContainer (CreateContainerRequest) returns (CreateContainerResponse) {}
  rpc BuildStatus (BuildStatusRequest) returns (BuildStatusResponse){}
}

// Enum of ContainerStatus
enum ContainerStatus {
  NOT_STARTED = 0;
  WAITING = 1;
  BUILDING = 2;
  BUILT = 3;
  FAILED = 4;
}

// enum of languages supported
enum Language {
  GO = 0;
  JAVA = 1;
  PYTHON = 2;
  NODEJS = 3;
  WebStatic = 4;
}

message CreateContainerRequest {
  string repoURL = 1;
  Language type = 2;
  int64 customerID = 3;
  string directory = 4;
}

message CreateContainerResponse { string buildID = 1; }

message BuildStatusRequest {
  string id = 1;
} 

message BuildStatusResponse {
  string imageName = 1;
  ContainerStatus status = 2;
}

